--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,14 @@ before_install:
   - docker build -t jadensiow/docker-react -f Dockerfile.dev .
 script:
   - docker run -e CI=true jadensiow/docker-react npm run test
+deploy:
+  provider: elasticbeanstalk
+  region: "ap-southeast-1"
+  app: "docker-react"
+  env: "Dockerreact-env"
+  bucket_name: "elasticbeanstalk-ap-southeast-1-599981727706"
+  bucket_path: "docker-react" # when created default name should be same as app
+  on:
+    branch: master # means only push to master then uplaod
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
